--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/hugo-hero-theme"]
 	path = themes/hugo-hero-theme
 	url = https://github.com/JugglerX/hugo-hero-theme.git
+[submodule "kutekai.github.io"]
+	path = kutekai.github.io
+	url = https://github.com/kutekai/kutekai.github.io.git
