--- a/data/contact.yaml
+++ b/data/contact.yaml
@@ -1,4 +1,2 @@
-email: 'zerostaticthemes@gmail.com'
-phone: 'XXXX XXX XXX'
-businessName: 'Hugo Serif'
-address: ''
+email: 'si@kutekai.com'
+businessName: 'Kutekai'
