--- a/config.toml
+++ b/config.toml
@@ -19,20 +19,20 @@ publishDir = "kutekai.github.io"
 	url = "/services/"
     weight = 1
 
-[[menu.main]]
-    name = "Work"
-    url = "/work/"
-    weight = 2
-
-[[menu.main]]
-    name = "About"
-    url = "/about/"
-    weight = 3
+#[[menu.main]]
+#    name = "Work"
+#    url = "/work/"
+#    weight = 2
+#
+#[[menu.main]]
+#    name = "About"
+#    url = "/about/"
+#    weight = 3
 
 [[menu.main]]
     name = "Contact"
     url = "/contact/"
-    weight = 4
+    weight = 2
 
 [permalinks]
   post = "/:year/:month/:day/:slug/"
